# Nova-test-Rag-system-

./: .env.example  .gitignore  README.md  audit_log.jsonl  evaluation_report.json  main.py  nova_mock_db.json  proejct_info.txt  pyproject.toml  rag_module.py  requirements.txt  task3_rag_pipeline.py  task5_demo.py  task5_nova_platform.py
chroma_db/: chroma.sqlite3
data/: product_catalog.txt
prompts/: support_system_prompt.txt
task2_mcp/: client.py  demo.py  server.py
